Fixed alignemnt issues

--- a/src/index.css
+++ b/src/index.css
@@ -135,5 +135,16 @@ All colors MUST be HSL.
 
   body {
     @apply bg-background text-foreground;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  input, textarea {
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
   }
 }
